--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: "HARBOUR";
-  src: url("../../public/fonts/Harbour.ttf");
+  src: url("../../public/fonts/StampGothic.otf");
 }
 
 :root {
