--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,8 @@
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
+    --swiper-navigation-color: #ccc;
+    --swiper-pagination-color: #ccc;
   }
 }
 
